<?xml version="1.0"?>
<package>
  <name>wumpus_simulator</name>
  <version>0.0.0</version>
  <description>The wumpus_simulator package</description>

  <maintainer email="lab-user@todo.todo">lab-user</maintainer>


  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt_gui</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
  
</package>
