<?xml version="1.0"?>
<package format="2">
  <name>wwf_generator</name>
  <version>0.0.0</version>
  <description>The wwf_generator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lisa@todo.todo">lisa</maintainer>

<license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>wumpus_simulator</depend>
  <depend>system_config</depend>
  <depend>roscpp</depend>

  <export></export>

</package>
